--- a/koha-tmpl/intranet-tmpl/prog/en/modules/reports/okm_reports.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/reports/okm_reports.tt
@@ -1,7 +1,6 @@
 [% INCLUDE 'doc-head-open.inc' %]
 <title>Koha &rsaquo; Reports &rsaquo; OKM annual report</title>
 [% INCLUDE 'doc-head-close.inc' %]
-
 </head>
 <body id="rep_reports-home" class="rep">
 [% INCLUDE 'header.inc' %]
@@ -13,15 +12,8 @@
     <h1>OKM annual reports</h1>
     <h6>See help for instructions</h6>
 
-    <form method="GET" action="/cgi-bin/koha/reports/okm_reports.pl" id="run_OKM_form">
-        <input type="hidden" name="op" value="run"/>
-        Statistical period:<br/>
-        Start <input type="text" id="startDate" name="startDate" size="10" value="[% startDate %]" />
-        End <input type="text" id="endDate" name="endDate" size="10" value="[% endDate %]" />
-        <a onClick="$('#run_OKM_form').submit();" class="btn btn-small" id="run_OKM"><i style="background-position: -96px -120px" class="icon-plus"></i> Give me statistics, or give me death!</a>
-    </form>
-
     <br/><br/>
+    [% IF okm %][% INCLUDE 'okm_asHtml.inc' libraryGroups=okm.getLibraryGroups() %][% END %]
     <div id="le_report_html">[% okm_report_html %]</div>
     <div id="le_report_csv">[% okm_report_csv %]</div>
     [% IF okm_report_errors %]<div id="le_report_errors">[% okm_report_errors %]</div>[% END %]
@@ -46,35 +38,60 @@
     [% quote %]
 
     <br/>
-    <div id="available_reports">
-        <table>
-            <thead>
-                <tr>
-                    <th>Report ID</th>
-                    <th>Start date</th>
-                    <th>End date</th>
-                    <th>Individual branches</th>
-                    <th>Action</th>
+    <table id="available_reports">
+        <thead>
+            <tr>
+                <th>Report ID</th>
+                <th>Start date</th>
+                <th>End date</th>
+                <th>Statistical groups</th>
+                <th></th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            [% FOREACH okm_report IN ready_okm_reports %]
+                <tr[% IF okm_report.selected %] class="highlighted-row"[% END %]>
+                    <td>[% okm_report.id %]</td>
+                    <td>[% okm_report.startdate %]</td>
+                    <td>[% okm_report.enddate %]</td>
+                    <td>
+                        [% IF okm_report.individualbranches %]
+                            [% IF okm_report.individualbranches == '*'%]
+                                All branches
+                            [% ELSE %]
+                                [% okm_report.individualbranches %]
+                            [% END %]
+                        [% ELSE %]
+                            OKM groups
+                        [% END %]</td>
+                    <td>
+                        <a href="/cgi-bin/koha/reports/okm_reports.pl?op=show&amp;okm_statisticsId=[% okm_report.id %]">Show</a>
+                    </td>
+                    <td>
+                        <a class="deleteButton" href="/cgi-bin/koha/reports/okm_reports.pl?op=delete&amp;okm_statisticsId=[% okm_report.id %]">Delete</a>
+                    </td>
                 </tr>
-            </thead>
-            <tbody>
-                [% FOREACH okm_report IN ready_okm_reports %]
-                    <tr>
-                        <td>[% okm_report.id %]</td>
-                        <td>[% okm_report.startdate %]</td>
-                        <td>[% okm_report.enddate %]</td>
-                        <td>[% okm_report.individualbranches %]</td>
-                        <td><a href="/cgi-bin/koha/reports/okm_reports.pl?op=show&amp;okm_statisticsId=[% okm_report.id %]">Show</a></td>
-                    </tr>
-                [% END %]
-            </tbody>
-        </table>
-    </div>
+            [% END %]
+        </tbody>
+    </table>
 
 </div>
 
 <script type="text/javascript">
-    $("#startDate").datepicker({ maxDate: "-1D" });
-    $("#endDate").datepicker({ maxDate: "-1D" });
+
+var MSG_OKM_STAT_DELETE_WARNING = _("Are you sure you want to delete this report?\nRebuilding can only be done from the serve side.");
+
+    $(document).ready( function () {
+
+        $(".deleteButton").click(function(e){
+            var ok = confirm(MSG_OKM_STAT_DELETE_WARNING);
+            if(! ok ) {
+                e.preventDefault();
+            }
+        });
+
+        $(".highlighted-row").children().addClass("highlighted-row");
+    });
 </script>
 [% INCLUDE 'intranet-bottom.inc' %]
