--- a/koha-tmpl/intranet-tmpl/prog/en/modules/help/tools/overduerules.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/help/tools/overduerules.tt
@@ -19,6 +19,7 @@
     <ul>
     <li>    If you choose to restrict a patron in this way you can also have Koha automatically remove that restriction with the AutoRemoveOverduesRestrictions preference.</li>
     </ul></li>
+    <li>Fine is the amount of money charged for sending the notification.</li>
     <li>Next you can choose the delivery method for the overdue notice. You can choose from Email, Feed, Phone (if you are using the iTiva Talking Tech service), Print and SMS (if you have set your SMSSendDriver). </li>
     <li>See a Sample Overdue Notice</li>
 </ul>
