Vaara-HACK!! If user has too many fines, still allow override with circulate_force_checkout
If there is an alternative way of overriding this, remove this patch!

TEST PLAN:
1. Give a borrower 1000€ of fines
2. Try checking out with the staff client.
3. Click the "override restriction temporarily" -button
4. Check out succesfully.

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/circulation.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/circulation.tt
@@ -602,6 +602,11 @@ No patron matched <span class="ex">[% message %]</span>
                     Checkouts are <span class="circ-hlt">BLOCKED</span> because fine balance is <span class="circ-hlt">OVER THE LIMIT</span>.
                 [% END %]
             <a href="/cgi-bin/koha/members/pay.pl?borrowernumber=[% borrowernumber %]">Make payment</a></li>
+				[% IF CAN_user_circulate_force_checkout %]
+					<span class="override_debarment">
+						<a href="/cgi-bin/koha/circ/circulation.pl?forceallow=1&amp;borrowernumber=[% borrowernumber %]" class="btn btn-small">Override restriction temporarily</a>
+					</span>
+				[% END %]
 			[% END %]
 
         	[% IF ( credits ) %]
