Bug 14540 - Move member-flags.pl to PermissionsManager to better manage permissions for testing.
Currently there is no nice way to grant/revoke permissions for Borrowers in Koha.
This is a big problem when doing integration testing and when working with
permissions using the future REST API.

Currently we have one web-script, member-flags.pl, which deals with all
permission-related things. Basically it always DELETEs all your permissions and
then adds them again with some modifications. There is no internal API for
creating permissions and this makes automated testing significantly harder.
To create permissions for a test borrower, we must decrypt the arcane way of
creating koha.borrowers.flags and add user_permissions with brittle SQL-queries.
This makes for very messy test scripts, and quite frankly this is hardly ever done
in Koha.
Also the koha.borrowers.flags-column is pretty horrible. It is 19-bit binary
array where each bit tells of the borrower has all permissions for the respective
permission module. This is very difficult to calculate and the mechanism is hard
to understand. This feature is also unnecessary, since we are always interested in
having the specific permissions. We don't need to know if one Borrower has all the
permissions for one module. Also what happens if more subpermissions are added to
the module? Existing all-permission-holders lose their all-permissions-status?

Instead we could have a nice internal API to work with permissions.

My patch introduces a new database structure for permissions
(not necessarily better), Koha::Object implementation of the DB structure,
and most importantly, a Koha::Auth::PermissionManager which is a gateway to all
permissions-related actions.

This feature is well tested with unit tests and PageObject integration tests.
See the tests for usage examples.
Especially the t/db_dependent/Members/member-flags.t
I hope you like it :)

SELENIUM TESTS:
Now that the new permission manager enables setting permissions ea

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/member-flags.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/member-flags.tt
@@ -9,23 +9,23 @@
         $("#permissionstree").treeview({animated: "fast", collapsed: true});
 
         // Enforce Superlibrarian Privilege Mutual Exclusivity
-        if($('input[id="flag-0"]:checked').length){
+        if($('input[id="flag-superlibrarian"]:checked').length){
             if ($('input[name="flag"]:checked').length > 1){
                 alert('Inconsistency Detected!\n\nThe superlibrarian privilege is mutually exclusive of other privileges, as it includes them all.\n\nThis patron\'s privileges will now be reset to include only superlibrarian.');
             }
 
             $('input[name="flag"]').each(function() {
-                if($(this).attr('id') != "flag-0"){
+                if($(this).attr('id') != "flag-superlibrarian"){
                     $(this).attr('disabled', 'disabled');
                     $(this).removeAttr('checked', 'checked');
                 }
             });
         }
 
-        $('input#flag-0').click(function() {
-            if($('input[id="flag-0"]:checked').length){
+        $('input#flag-superlibrarian').click(function() {
+            if($('input[id="flag-superlibrarian"]:checked').length){
                 $('input[name="flag"]').each(function() {
-                    if($(this).attr('id') != "flag-0"){
+                    if($(this).attr('id') != "flag-superlibrarian"){
                         $(this).attr('disabled', 'disabled');
                         $(this).removeAttr('checked', 'checked');
                     }
@@ -121,9 +121,9 @@
         <!-- <li class="folder-close">One level down<ul> -->
     [% FOREACH loo IN loop %]
         [% IF ( loo.expand ) %]
-        <li class="open">
+        <li class="[% loo.flag %] open">
         [% ELSE %]
-        <li>
+        <li class="[% loo.flag %]">
         [% END %]
 			[% IF ( loo.checked ) %]
 			   <input type="checkbox" id="flag-[% loo.bit %]" name="flag" value="[% loo.flag %]" checked="checked" onclick="toggleChildren(this)" />
