--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/circulation.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/circulation.tt
@@ -755,15 +755,13 @@ No patron matched <span class="ex">[% message %]</span>
         <table id="relatives-issues-table">
             <thead>
                 <tr>
-                    <th scope="col">Due date (unformatted, hidden)</th>
+                    <th scope="col">&nbsp;</th>
                     <th scope="col">Due date</th>
                     <th scope="col">Title</th>
                     <th scope="col">Item type</th>
                     <th scope="col">Checked out on</th>
                     <th scope="col">Checked out from</th>
                     <th scope="col">Call no</th>
-                    <th scope="col">Charge</th>
-                    <th scope="col">Price</th>
                     <th scope="col">Patron</th>
                 </tr>
             </thead>
