--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/boraccount.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/boraccount.tt
@@ -37,6 +37,7 @@
     <th>&nbsp;</th>
     [% END %]
     <th>Print</th>
+    <th>Send</th>
   </tr>
 
 	<!-- FIXME: Shouldn't hardcode dollar signs, since Euro or Pound might be needed -->
@@ -87,6 +88,13 @@
 		<a target="_blank" href="printinvoice.pl?action=print&amp;accountlines_id=[% account.accountlines_id %]&amp;borrowernumber=[% account.borrowernumber %]">Print</a>
 	[% END %]
       </td>
+  [% IF ( account.billing && !account.payment) %]
+      <td>
+        <a href="sendinvoice.pl?branchcode=[% account.branchcode %]&amp;accountlines_id=[% account.accountlines_id %]&amp;borrowernumber=[% account.borrowernumber %]">Send</a>
+      </td>
+  [% ELSE %]
+    <td></td>
+  [% END %]
     </tr>
 
   [% END %]
@@ -103,7 +111,7 @@
       [% IF ( reverse_col ) %]
         <td colspan="3" class="debit">
       [% ELSE %]
-        <td colspan="2" class="credit">
+        <td colspan="3" class="credit">
       [% END %]
     [% END %]
     [% total %]</td>
